# vulkan.node.js

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  binding.gyp  index.d.ts  index.js  main.cjs  native.js  package-lock.json  package.json  test.js
.github/workflows/: node.js.yml
examples/init-test/: index.js
examples/triangle/: index.js
examples/triangle-rtx/: index.cmd  index.js
examples/triangle-rtx/shaders/: compile.cmd  triangle.comp  triangle.comp.spv
examples/triangle/shaders/: compile.cmd  triangle.frag.spv  triangle.vert
include/: vk_video  vulkan
shaders/: triangle.frag  triangle.vert  triangle.vert.spv
src/: commands.json  enums.json  glfw.hpp  main.js  native.cpp  native.hpp  native.js  parsed-commands.json  parsed-enums.json  parsed-requirements.json  parsed-structs.json  parsed-types.json  reader.cmd  reader.js  sizes.h  test.cmd  test.js  typed.js  used-by.json  vk-utils.h  volk  vulkan-API.cpp  vulkan-API.js  vulkan-enums.js  vulkan-structs.js  writer.js
src/parsed/: commands.json  enums.json  structs.json  types.json  used-by.json
src/raw/: commands.json  enums.json  features.json
vulkan-wasm/: package.json
